--- a/app/views/amendments/show.html.erb
+++ b/app/views/amendments/show.html.erb
@@ -79,8 +79,8 @@
             <td title="<%= modification.concept&.full_title %>"><%= modification.concept&.ref %></td>
             <td title="<%= modification.subconcept&.full_title %>"><%= modification.subconcept&.ref %></td>
             <td><%= modification.project %></td>
-            <td title="<%= modification.concept&.full_title %>"><%= t("helpers.label.modification.#{modification.amount_sign_human}") %></td>
-            <td style="text-align: right;"><%= number_to_currency modification.abs_amount %></td>
+            <td title="<%= modification.concept&.full_title %>"><%= modification.type_name %></td>
+            <td style="text-align: right;"><%= number_to_currency modification.amount %></td>
             <td align="right">
               <%= link_to t('helpers.action.edit'), edit_amendment_modification_path(amendment, modification), class: 'btn btn-sm btn-outline-warning' %>
               <%= link_to t('helpers.action.destroy'), amendment_modification_path(amendment, modification), method: :delete, data: { confirm: t('helpers.messages.are_you_sure') }, class: 'btn btn-sm btn-outline-danger' %>
