--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
       <div class="container pr-0">
 
-            <%= link_to t(:site_title), budgets_path, class: 'navbar-brand' %>
+            <%= link_to (fa_icon 'heart-o', text: t(:site_title)), budgets_path, class: 'navbar-brand' %>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#main_nav" aria-controls="main_nav" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
