--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -26,10 +26,25 @@ $component-default-bg: linear-gradient(40deg, $up-first-color, $up-first-color 5
 $component-active-bg: #d4edda;
 $component-active-bg-hover: lighten(#000, 93.5%);
 $component-active-color: var(--success);
+$component-active-border: lighten($component-default-color, 27%);
+$component-active-border-shadow: lighten($component-default-color, 49%);
 
+textarea, input {
+  &:active, &:focus {
+    border-color: $component-active-border !important;
+    box-shadow: 0 1px 1px $component-active-border-shadow inset, 0 0 4px $component-active-border-shadow !important;
+    outline: 0 none;
+  }
+}
 
-h1 { font-size: 1.4rem; font-weight: 700; }
-h2 { font-size: 1.2rem; font-weight: 600; }
+.custom-control-input:checked ~ .custom-control-label::before {
+  color: #fff;
+  border-color: $component-default-color;
+  background-color: $component-default-color;
+}
+
+h1 { font-size: 1.15rem; font-weight: 600; color: $component-default-color; }
+h2 { font-size: 1.05rem; font-weight: 600; color: $component-default-color; }
 
 a {
   color: $component-default-color;
@@ -65,18 +80,25 @@ a, .alert {
     padding-right: 5px;
   }
 }
+i.fa.status {
+  padding-left: 10px;
+  cursor: help;
+}
 
 .navbar.navbar-dark.bg-primary { background: $component-default-bg !important; }
 .navbar-brand { font-weight: 700;  }
 
 h1.page-title {
-  color: $component-default-color;
-  margin-top: 20px;
+  margin-top: 25px;
   margin-bottom: 30px;
   padding-bottom: 10px;
   border-bottom-color: rgba(0, 0, 0, 0.1);
   border-bottom-style: solid;
   border-bottom-width: 1px;
+}
+
+h2.card-title {
+  color: inherit;
 }
 
 div.actions {
