--- a/app/views/amendments/show.html.erb
+++ b/app/views/amendments/show.html.erb
@@ -91,7 +91,11 @@
           </tr>
         <% end %>
       <tr style="border-top: 1px solid #eee;">
-        <td colspan="9" style="text-align: right;"><b class="text-secondary"><%= t('helpers.label.amendment.balance') %>:</b> <%= number_to_currency amendment.balance %></td>
+        <td colspan="9" style="text-align: right;">
+            <b class="text-secondary"><%= t('helpers.label.amendment.total_amount') %>:</b> <%= number_to_currency amendment.total_amount %>
+            &nbsp;&nbsp;&nbsp;
+            <b class="text-secondary"><%= t('helpers.label.amendment.display_amount') %>:</b> <%= number_to_currency amendment.display_amount %>
+        </td>
       </tr>
       </tbody>
     </table>
