--- a/app/views/modifications/new.html.erb
+++ b/app/views/modifications/new.html.erb
@@ -1,4 +1,10 @@
-<h1 class="page-title"><%= t('.title', budget: budget.title, amendment: amendment.number) %></h1>
+<div class="row">
+  <h1 class="col-8 page-title"><%= t('.title', budget: budget.title, amendment: amendment.number) %></h1>
+  <h1 class="col-4 page-title text-right">
+    <%= amendment.type_name %>
+    <%= fa_icon *amendment.status_icon_params %>
+  </h1>
+</div>
 
 <%= render 'form', amendment: amendment, modification: modification %>
 
