--- a/app/views/modifications/_form.html.erb
+++ b/app/views/modifications/_form.html.erb
@@ -10,7 +10,7 @@
     </div>
   <% end %>
 
-  <% unless modification&.locked_type? %>
+  <% unless modification.locked_type? %>
     <div class="form-group row type">
       <div class="col-form-label col-sm-3 text-md-right">
         <%= f.label :type %>
@@ -22,19 +22,19 @@
   <% end %>
 
   <div class="row px-3">
-    <div id="section" class="pseudoiframe col-12 col-sm-6" src="<%= browse_section_amendment_path(id: amendment, section_id: modification.section, service_id: modification.service_id, program_id: modification.program_id, locked_section: modification.locked_section?) %>"></div>
-    <div id="chapter" class="pseudoiframe col-12 col-sm-6" src="<%= browse_chapter_amendment_path(id: amendment, chapter_id: modification.chapter_id, article_id: modification.article_id, concept_id: modification.concept_id, subconcept_id: modification.subconcept_id) %>"></div>
+    <div id="section" class="pseudoiframe col-12 col-sm-6"
+      src="<%= browse_section_amendment_path(id: amendment, section_id: modification.section, service_id: modification.service_id, program_id: modification.program_id, locked_section: modification.locked_section?) %>"
+      initial-src="<%= browse_section_amendment_path(id: amendment, section_id: modification.section, service_id: modification.service_id, program_id: modification.program_id, locked_section: modification.locked_section?) %>"
+      reset-src="<%= browse_section_amendment_path(id: amendment, section_id: modification.section, locked_section: modification.locked_section?) %>"
+      ></div>
+    <div id="chapter" class="pseudoiframe col-12 col-sm-6"
+      src="<%= browse_chapter_amendment_path(id: amendment, chapter_id: modification.chapter_id, article_id: modification.article_id, concept_id: modification.concept_id, subconcept_id: modification.subconcept_id) %>"
+      initial-src="<%= browse_chapter_amendment_path(id: amendment, chapter_id: modification.chapter_id, article_id: modification.article_id, concept_id: modification.concept_id, subconcept_id: modification.subconcept_id) %>"
+      reset-src="<%= browse_chapter_amendment_path(id: amendment) %>"
+      ></div>
   </div>
 
-  <input id="section_initial" type="hidden" value="<%= browse_section_amendment_path(id: amendment, section_id: modification.section, service_id: modification.service_id, program_id: modification.program_id, locked_section: modification.locked_section?) %>" />
-  <input id="chapter_initial" type="hidden" value="<%= browse_chapter_amendment_path(id: amendment, chapter_id: modification.chapter_id, article_id: modification.article_id, concept_id: modification.concept_id, subconcept_id: modification.subconcept_id) %>" />
-
-  <input id="section_reset" type="hidden" value="<%= browse_section_amendment_path(id: amendment, section_id: modification.section, locked_section: modification.locked_section?) %>" />
-  <input id="chapter_reset" type="hidden" value="<%= browse_chapter_amendment_path(id: amendment) %>" />
-
-  <input id="current_type" type="hidden" value="<%= modification.type %>" />
-
-  <% if modification.modification_detail? %>
+  <% if !modification.locked_type? || modification.modification_detail? %>
     <div id="standard_modification_detail">
       <%= f.text_field :project %>
       <%= f.check_box :project_new, custom: :switch, class: 'text-center', wrapper_class: 'col-9 offset-3 text-left mb-3' %>
@@ -42,6 +42,8 @@
     </div>
   <% end %>
 
+  <input id="current_type" type="hidden" value="<%= modification.type %>" />
+  <input id="detailed_modification_types" type="hidden" value="<%= amendment.detailed_modifications.map(&:name).to_json %>" />
 
   <div class="actions">
     <%= f.submit class: 'btn btn-sm btn-success' %>
