--- a/app/views/amendments/index.html.erb
+++ b/app/views/amendments/index.html.erb
@@ -8,17 +8,18 @@
 <div class="row">
 <% amendments.each do |amendment| %>
 <a class="card-block py-2 col-12" href="<%= amendment_path(amendment) %>" style="flex-grow: 2;">
-  <div class="card">
-    <div class="card-header text-dark">
+  <div class="card card-alert<% if amendment.completed? %> alert-success<% end %>">
+    <div class="card-header">
       <div class="row">
-        <div class="col-12 col-md-3">
+        <div class="col-12 col-md-2">
           <b class="card-title"><%= t('helpers.views.amendment.number', amendment: amendment.number) %></b>
         </div>
-        <div class="col-12 col-md-6">
+        <div class="col-12 col-md-7">
         <%= amendment_section_label(amendment) %>
         </div>
         <div class="col-12 col-md-3 text-right">
           <span><%= amendment.type_name %></span>
+          <%= fa_icon *amendment.status_icon_params %>
         </div>
       </div>
     </div>
@@ -30,22 +31,26 @@
         </div>
 
         <div class="col-12">
+
         <% if amendment.allow_articulated? %>
-  <% if amendment.any_articulated? %>
-    <table class="w-100">
-      <tbody>
-        <% articulated = amendment.articulated %>
-        <tr>
-          <td><b><%= Articulated.human_attribute_name(:type) %>:</b> <%= articulated.type_name %></td>
-          <td><b><%= Articulated.human_attribute_name(:title) %>:</b> <%= articulated.title %></td>
-        </tr>
-      </tbody>
-    </table>
-  <% end %>
+          <% if amendment.any_articulated? %>
+
+            <table class="w-100">
+              <tbody>
+                <% articulated = amendment.articulated %>
+                <tr>
+                  <td><b><%= Articulated.human_attribute_name(:type) %>:</b> <%= articulated.type_name %></td>
+                  <td><b><%= Articulated.human_attribute_name(:title) %>:</b> <%= articulated.title %></td>
+                </tr>
+              </tbody>
+            </table>
+
+          <% end %>
         <% end %>
 
         <% if amendment.allow_modifications? %>
-          <% if amendment.modifications.size.positive? %>
+          <% if amendment.any_modifications? %>
+
             <table class="w-100 mt-2">
               <thead class="text-secondary">
                 <tr>
@@ -62,7 +67,7 @@
               </thead>
 
               <tbody>
-                <% amendment.modifications.additions_first.each do |modification| %>
+                <% amendment.modifications.sort_by(&:position).each do |modification| %>
                   <tr style="border-bottom: 1px solid #eee;">
                     <td title="<%= modification.service&.full_title %>"><%= modification.service&.ref %></td>
                     <td title="<%= modification.program&.full_title %>"><%= modification.program&.ref %></td>
@@ -71,19 +76,14 @@
                     <td title="<%= modification.concept&.full_title %>"><%= modification.concept&.ref %></td>
                     <td title="<%= modification.subconcept&.full_title %>"><%= modification.subconcept&.ref %></td>
                     <td><%= modification.project %></td>
-                    <td title="<%= modification.concept&.full_title %>"><%= t("helpers.label.modification.#{modification.amount_sign_human}") %></td>
-                    <td style="text-align: right;"><%= number_to_currency modification.amount %></td>
+                    <td title="<%= modification.concept&.full_title %>"><%= modification.type_name %></td>
+                    <td style="text-align: right;"><%= number_to_currency modification.display_amount %></td>
                   </tr>
-                <% end %>
-                <% if false %>
-                <tr style="border-bottom: 1px solid #eee;">
-                  <td colspan="8" style="text-align: right;"><b class="text-secondary"><%= t('helpers.label.amendment.total_amount') %>:</b> <%= number_to_currency amendment.modifications.sum(:amount) %></td>
-                </tr>
                 <% end %>
               </tbody>
             </table>
-          <% end %>
 
+          <% end %>
         <% end %>
 
         </div>
